Add brand style colors

--- a/00_Fabricator_Factory/src/data/toolkit.yml
+++ b/00_Fabricator_Factory/src/data/toolkit.yml
@@ -1,8 +1,16 @@
 colors:
   primary:
-    Dark: "#0075DE"
-    Light: "rgb(242, 242, 242)"
+    c_bb_blue: "#0075DE"
+    c_bb_midblue: "#41B6E6"
+    c_bb_lightblue: "#E6F0F7"
   secondary:
-    Red: "rgb(201, 55, 6)"
-    Yellow: "rgb(252, 207, 80)"
-    Blue: "rgb(39, 102, 143)"
+    c_orange: "#F59331"
+    c_yellow: "#E60E0E"
+  typography:
+    c_darkgrey: "#353535"
+    c_midgrey: "#636363"
+    c_lightgrey: "#A5A5A5"
+  stroke:
+    c_slategrey: "#898D8D"
+    c_lightgrey: "#A5A5A5"
+		c_lightestgrey: "#DCDCDC"
